--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,12 @@
 Changelog
 =========
 
-0.01_04 29 Dec 2003
+0.01 12 Jan 2004
+  - Turn memoization back on.
+  - Various minor optimizations (~20% performance increase on some
+    cases)
+
+0.01_04 27 Dec 2003
   - Doc tweak
 
 0.01_03 20 Dec 2003
