Import of DMAKI/DateTime-Util-Astro-0.04 from CPAN.
gitpan-cpan-distribution: DateTime-Util-Astro
gitpan-cpan-version:      0.04
gitpan-cpan-path:         DMAKI/DateTime-Util-Astro-0.04.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+0.03 07 Jan 2005
+  - No more param validation in the name of efficiency
+  - Use Math::BigInt/Math::BigFloat more extensively
+  - Require newer DateTime::Util::Calc
+  - Use Cache::Cache for caching
+  - No more memoizing
+
 0.02 10 Feb 2004
   - Change Build.PL to require DateTime::Util::Calc 0.02, which will handle
     prompting for math libraries more elegantly
