Import of DMAKI/DateTime-Util-Astro-0.05 from CPAN.
gitpan-cpan-distribution: DateTime-Util-Astro
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DMAKI/DateTime-Util-Astro-0.05.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
 Changelog
 =========
 
-0.03 07 Jan 2005
+0.05 08 Jan 2005
+  - Introduce set_cache()/add_cache() interface.
+  - Change default cache to MemoryCache, but recommend FileCache
+
+0.04 07 Jan 2005
   - No more param validation in the name of efficiency
   - Use Math::BigInt/Math::BigFloat more extensively
   - Require newer DateTime::Util::Calc
