Import of DMAKI/DateTime-Util-Astro-0.06 from CPAN.
gitpan-cpan-distribution: DateTime-Util-Astro
gitpan-cpan-version:      0.06
gitpan-cpan-path:         DMAKI/DateTime-Util-Astro-0.06.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+0.06 12 Jan 2005
+  - Fix solar_longitude_before()
+  - Add tests
+
 0.05 08 Jan 2005
   - Introduce set_cache()/add_cache() interface.
   - Change default cache to MemoryCache, but recommend FileCache
