Import of DMAKI/DateTime-Util-Astro-0.08 from CPAN.
gitpan-cpan-distribution: DateTime-Util-Astro
gitpan-cpan-version:      0.08
gitpan-cpan-path:         DMAKI/DateTime-Util-Astro-0.08.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,14 @@
 Changelog
 =========
 
+0.08 05 Feb 2007
+  - Use DateTime::Util::Calc 0.12, which fixes various problems.
+  - Fix tests accordingly.
+
+0.07 12 Jan 2005
+  - Fix bug that came up while debugging DateTime::Event::SolarTerm
+  - This version was never released
+
 0.06 12 Jan 2005
   - Fix solar_longitude_before()
   - Add tests
