Import of DMAKI/DateTime-Util-Astro-0.09 from CPAN.
gitpan-cpan-distribution: DateTime-Util-Astro
gitpan-cpan-version:      0.09
gitpan-cpan-path:         DMAKI/DateTime-Util-Astro-0.09.tar.gz
gitpan-cpan-author:       DMAKI
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+0.09 06 Feb 20077
+  - Change versioning. No code change.
+
 0.08 05 Feb 2007
   - Use DateTime::Util::Calc 0.12, which fixes various problems.
   - Fix tests accordingly.
