--- a/CHANGES
+++ b/CHANGES
@@ -1,11 +1,18 @@
 Changelog
 =========
 
+0.11 28 May 2007
+  - fix solar_longitude_after() to a degree. I still can't get a few dates
+    to calculate a close enough approximation, but this should do for
+    many cases (patches welcome)
+  - use Exporter without subclassing (Sun.pm, Common.pm)
+  - add warnings
+
 0.10 28 May 2007
   - use Class::Data::Inheritable.
   - remove set_cache()/get_cache() in favor for cache()
   - make Cache::MemoryCache optional
-  - use Exporter without subclassing
+  - use Exporter without subclassing (Lunar.pm)
 
 0.09 06 Feb 2007
   - Change versioning. No code change.
